--- a/CSS/alle-produkter.css
+++ b/CSS/alle-produkter.css
@@ -1,12 +1,231 @@
-.category-box {
+.category-box_width {
     background-color: var(--red-color);
+}
+
+.category-box {
     padding: 4rem;
     min-height: 275px;
+}
+
+.category-box__image {
+    width: 100%;
+    object-fit: cover;
+    object-position: right;
+    max-width: 100%;
+    height: auto;
 }
 
 .category-box__description {
     max-width: 600px;
 }
+
+.box-size {
+    width: 90%;
+    padding: 30px;
+    position: relative;
+}
+
+.middle {
+    margin: 0 auto;
+}
+
+.flytmigbund {
+    margin-bottom: -80px;
+}
+
+@media only screen and (min-width: 420px) {
+    .box-size {
+        width: 75%;
+        padding: 40px;
+    }
+}
+
+@media only screen and (min-width: 750px) {
+
+    .category-box__image {
+        max-width: 40%;
+    }
+
+    .flytmigbund {
+        margin-bottom: 0px;
+    }
+
+    .box-size {
+        padding: 100px;
+    }
+
+    .halv-om-halv1 {
+        flex-grow: 1;
+        flex-basis: 300px;
+    }
+
+    .halv-om-halv {
+        flex-grow: 2;
+        flex-basis: 900px;
+    }
+
+    .category-box__description {
+        max-width: 370px;
+        flex-grow: 0;
+    }
+
+    .js-category-box {
+        display: flex;
+
+    }
+
+}
+
+
+/* Category slider */
+.category-slider {
+    background-color: #fff;
+    background-color: #fff;
+    /*    width: 100%;*/
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.category-slider__title {
+    padding: 0 var(--space-md);
+    margin-bottom: 3rem;
+}
+
+.category-list-container {
+    position: sticky;
+    top: 90px;
+}
+
+/*
+
+.category-list-container::before {
+    content: '';
+    width: var(--space-md);
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: block;
+    z-index: 1;
+    background-image: linear-gradient(to left, hsla(0, 0%, 100%, 0) 0, #fff);
+}
+
+.category-list-container::after {
+    content: '';
+    background-image: linear-gradient(90deg, hsla(0, 0%, 100%, 0) 0, #fff);
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: var(--space-md);
+    display: block;
+    height: 100%;
+    z-index: 1;
+}
+*/
+
+.category-list {
+    /*    display: flex;*/
+    list-style: none;
+    width: 100%;
+    /*
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
+*/
+    /*    position: relative;*/
+
+}
+
+.category-list > .category-list__item:last-child::after {
+    content: '';
+    width: var(--space-md);
+    height: 100%;
+    position: absolute;
+    right: 0;
+    top: 0;
+    background-color: #fff;
+    z-index: 2;
+}
+
+.category-list__item {
+    /*    padding-top: 1rem;*/
+    display: flex;
+    flex-direction: column;
+    /*    text-align: center;*/
+    padding-left: var(--space-md);
+    flex-grow: 1;
+    scroll-snap-align: start;
+    flex-wrap: wrap;
+    flex-basis: 0;
+}
+
+.category-list__link {
+    text-decoration: none;
+    color: #000;
+    display: flex;
+    /*    flex-direction: column;*/
+}
+
+.category-list__item:last-child {
+    padding-right: var(--space-md);
+    position: relative;
+}
+
+.category-list__icon-container {
+    border-radius: 50%;
+    /*    padding: 0.var(--space-md);*/
+    /*    margin-bottom: 0.5rem;*/
+    max-height: 100px;
+    max-width: 100px;
+    /*    margin-left: auto;*/
+    /*    margin-right: auto;*/
+}
+
+.category-list__icon {
+    height: 100px;
+    width: 100px;
+    max-width: none;
+    /*    background-color: var(--red-color);*/
+    /*    border-radius: 50%;*/
+    /*    padding: 1rem;*/
+    /*    border: 5px solid #fff;*/
+    transition: transform .25s ease-out;
+    /*    box-shadow: 1px 1px 5px rgba(155, 155, 155, 0.3);*/
+}
+
+.category-list__icon:hover {
+
+    transform: scale(1.06);
+    transition: 0.2s;
+}
+
+.category-list__icon:active {
+    background-color: var(--blue-color);
+    transform: scale(1.07);
+}
+
+.category-list__category-title {
+    font-family: var(--font-family-roboto);
+    font-weight: var(--font-weight-light);
+    font-size: var(--h6-font-size);
+    vertical-align: middle;
+    align-self: center;
+}
+
+.button-clicked h3 {
+    font-weight: 400;
+    border-bottom: 6px solid #c4e8ff;
+    padding-bottom: 5px;
+}
+
+/*
+.button-clicked img {
+    background-color: var(--blue-color);
+}
+*/
+
+/********************END Category Slider ********************/
+
+/******************** PRODUCT GRID ********************/
 
 .product-list {
     display: grid;
@@ -15,18 +234,15 @@
     grid-row-gap: 6.2rem;
 }
 
-.product {}
-
 .product:hover .product__image {
     transform: scale(1.025);
 }
 
 .product__image-container {
     position: relative;
-    padding-bottom: 100%;
+    padding-bottom: 115%;
     overflow: hidden;
 }
-
 
 .product__image {
     position: absolute;
@@ -42,6 +258,32 @@
     transform: scale(1);
 }
 
+.product__name,
+.product__category-link,
+.product__price-text {
+    padding-left: 1rem;
+    word-wrap: break-word;
+    max-width: 330px;
+}
+
+.product__name {
+    font-size: 2.5rem;
+    font-family: var(--font-family-roboto);
+    font-weight: var(--font-weight-light);
+}
+
+.product__category-link {
+    color: var(--cta-primary-background-color);
+    margin-top: -5px;
+    font-size: 1.5rem;
+}
+
+.product__price-text {
+    font-weight: var(--font-weight-regular);
+    padding-top: 5px;
+    font-size: 2rem;
+}
+
 .wp-block-group:nth-of-type(1),
 .wp-block-group:nth-of-type(2),
 .wp-block-group:nth-of-type(3) {
@@ -53,7 +295,119 @@
     padding: 0 0 20px 25px;
 }
 
+/******************** PRODUCT GRID ********************/
+
+@media only screen and (min-width: 750px) {
+
+    .vertical-menu-mover {
+        display: flex;
+        max-width: 1400px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .category-slider,
+    .products {
+        padding-left: 0rem;
+        padding-right: 0rem;
+        margin-left: 0;
+        margin-right: 0;
+    }
+
+    .product-list {
+        max-width: 1000px;
+    }
+
+}
+
+
+@media only screen and (min-width: 400px) {
+    .container_products {
+        /*        max-width: 1200px;*/
+        padding-left: 3rem;
+        padding-right: 3rem;
+        margin: 0 auto;
+    }
+
+    .product-list {
+        grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+        grid-column-gap: 3rem;
+        grid-row-gap: 6rem;
+    }
+
+    .product__name,
+    .product__category-link,
+    .product__price-text {
+        padding-left: 0rem;
+        word-wrap: initial;
+    }
+}
+
+@media only screen and (min-width: 500px) {
+    .product-list {
+        grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+        grid-column-gap: 3rem;
+        grid-row-gap: 6rem;
+    }
+
+}
+
+@media only screen and (min-width: 570px) {
+    .product-list {
+        grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+        grid-column-gap: 4rem;
+        grid-row-gap: 6rem;
+    }
+
+}
+
+@media only screen and (min-width: 600px) {
+    .product-list {
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+        grid-column-gap: 4rem;
+        grid-row-gap: 7rem;
+    }
+
+}
+
+@media only screen and (min-width: 800px) {
+    .product-list {
+        grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+        grid-column-gap: 4rem;
+        grid-row-gap: 7rem;
+    }
+
+    .product__name {
+        font-size: 2.8rem;
+    }
+
+    .product__category-link {
+        margin-top: -5px;
+        font-size: 1.8rem;
+    }
+
+    .product__price-text {
+        padding-top: 20px;
+        font-size: 2.3rem;
+    }
+}
+
+@media only screen and (min-width: 1160px) {
+    .product-list {
+        /*        grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));*/
+        grid-column-gap: 5rem;
+        grid-row-gap: 7rem
+    }
+
+}
+
+
+
+
+
+
 /* Colorblock */
+/*
 
 .grid-container {
     display: grid;
@@ -78,12 +432,12 @@
     justify-content: center;
     padding: 3rem;
 
-    /*
+
     grid-column-start: 2;
     grid-column-end: 3;
     grid-row-start: 1;
     grid-row-end: 2;
-*/
+
 
     background-color: var(--cta-primary-background-color);
 }
@@ -104,6 +458,8 @@
     color: white;
     font-weight: var(--font-weight-regular);
 }
+*/
+/*
 
 @media only screen and (min-width: 700px) {
     .grid-container {
@@ -159,97 +515,4 @@
         grid-row-end: 3;
     }
 }
-
-.product__name,
-.product__category-link,
-.product__price-text {
-    padding-left: 1rem;
-    word-wrap: break-word;
-    max-width: 330px;
-}
-
-.product__name {
-    font-size: 2.5rem;
-}
-
-.button-clicked h3 {
-    font-weight: 400;
-}
-
-.button-clicked img {
-    background-color: var(--blue-color);
-}
-
-@media only screen and (min-width: 400px) {
-    .container_products {
-        max-width: 1200px;
-        padding-left: 3rem;
-        padding-right: 3rem;
-        margin: 0 auto;
-    }
-
-    .product-list {
-        grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-        grid-column-gap: 3rem;
-        grid-row-gap: 6rem;
-    }
-
-    .product__name,
-    .product__category-link,
-    .product__price-text {
-        padding-left: 0rem;
-        word-wrap: initial;
-    }
-}
-
-@media only screen and (min-width: 500px) {
-    .product-list {
-        grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-        grid-column-gap: 3rem;
-        grid-row-gap: 6rem;
-    }
-
-}
-
-@media only screen and (min-width: 570px) {
-    .product-list {
-        grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-        grid-column-gap: 4rem;
-        grid-row-gap: 6rem;
-    }
-
-}
-
-@media only screen and (min-width: 600px) {
-    .product-list {
-        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-        grid-column-gap: 4rem;
-        grid-row-gap: 7rem;
-    }
-
-    .product__name {
-        font-size: 3.5rem;
-    }
-
-    .product__category-link .product__price-text {
-        font-size: 1.8rem;
-    }
-}
-
-@media only screen and (min-width: 800px) {
-    .product-list {
-        grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-        grid-column-gap: 4rem;
-        grid-row-gap: 7rem;
-    }
-
-}
-
-@media only screen and (min-width: 1160px) {
-    .product-list {
-        grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-        grid-column-gap: 5rem;
-        grid-row-gap: 7rem
-    }
-
-}
+*/
