--- a/CSS/alle-produkter.css
+++ b/CSS/alle-produkter.css
@@ -7,10 +7,11 @@
     min-height: 275px;
 }
 
+
 .category-box__image {
     width: 100%;
     object-fit: cover;
-    object-position: right;
+    object-position: top;
     max-width: 100%;
     height: auto;
 }
@@ -65,19 +66,26 @@
     }
 
     .category-box__description {
-        max-width: 370px;
+        max-width: 500px;
         flex-grow: 0;
     }
 
     .js-category-box {
         display: flex;
-
+        max-height: 700px;
     }
 
 }
 
 
 /* Category slider */
+.category-title {
+    font-size: 2.5rem;
+    font-family: var(--font-family-roboto);
+    font-weight: var(--font-weight-regular);
+    padding-left: var(--space-md);
+}
+
 .category-slider {
     background-color: #fff;
     background-color: #fff;
@@ -92,8 +100,10 @@
 }
 
 .category-list-container {
+    /*
     position: sticky;
     top: 90px;
+*/
 }
 
 /*
@@ -375,6 +385,15 @@
         grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
         grid-column-gap: 4rem;
         grid-row-gap: 7rem;
+    }
+
+    .category-list-container {
+        position: sticky;
+        top: 140px;
+    }
+
+    .category-title {
+        font-size: 2.8rem;
     }
 
     .product__name {
