--- a/CSS/alle-produkter.css
+++ b/CSS/alle-produkter.css
@@ -72,7 +72,8 @@
 
     .js-category-box {
         display: flex;
-        max-height: 700px;
+        max-height: 600px;
+        height: 600px;
     }
 
 }
@@ -80,10 +81,51 @@
 
 /* Category slider */
 .category-title {
+    /*    display: none;*/
+}
+
+.filter-mobile-button {
+    width: 250px;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.category-title-mobile {
+    font-size: 2rem;
+    font-family: var(--font-family-roboto);
+    font-weight: var(--font-weight-light);
+    color: white;
+    /*    padding-left: var(--space-md);*/
+}
+
+.category-title {
     font-size: 2.5rem;
     font-family: var(--font-family-roboto);
     font-weight: var(--font-weight-regular);
     padding-left: var(--space-md);
+    display: block;
+}
+
+.category-title-mobile,
+.filter-svg,
+.feather-x,
+.category-title {
+    display: inline-block;
+}
+
+.filter-svg {
+    height: auto;
+    vertical-align: top;
+    margin-right: 10px;
+}
+
+.cta-primary:hover {
+    color: white;
+}
+
+.show-filtering-buttons {
+    display: none;
 }
 
 .category-slider {
@@ -311,6 +353,7 @@
 
     .vertical-menu-mover {
         display: flex;
+        justify-content: space-between;
         max-width: 1400px;
         margin-left: auto;
         margin-right: auto;
@@ -322,20 +365,35 @@
         padding-right: 0rem;
         margin-left: 0;
         margin-right: 0;
+        flex-grow: 1;
+    }
+
+    .products {
+        padding-right: 3rem;
     }
 
     .product-list {
         max-width: 1000px;
     }
 
+
+
+    .show-filtering-buttons {
+        display: block;
+    }
+
+    .feather,
+    .filter-mobile-button {
+        display: none;
+    }
 }
 
 
 @media only screen and (min-width: 400px) {
     .container_products {
         /*        max-width: 1200px;*/
-        padding-left: 3rem;
-        padding-right: 3rem;
+        /*        padding-left: 3rem;*/
+        /*        padding-right: 3rem;*/
         margin: 0 auto;
     }
 
@@ -383,7 +441,7 @@
 @media only screen and (min-width: 800px) {
     .product-list {
         grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-        grid-column-gap: 4rem;
+        grid-column-gap: 100px;
         grid-row-gap: 7rem;
     }
 
@@ -414,7 +472,7 @@
 @media only screen and (min-width: 1160px) {
     .product-list {
         /*        grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));*/
-        grid-column-gap: 5rem;
+        grid-column-gap: 100px;
         grid-row-gap: 7rem
     }
 
