--- a/CSS/index.css
+++ b/CSS/index.css
@@ -347,7 +347,7 @@ html {
     display: flex;
     flex-direction: column;
     text-align: center;
-    padding-left: 2rem;
+    /*    padding-left: 2rem;*/
     flex-grow: 1;
     scroll-snap-align: start;
 }
@@ -355,6 +355,10 @@ html {
 .category-list__link {
     text-decoration: none;
     color: #000;
+}
+
+.category-list__item:first-child {
+    padding-left: 2rem;
 }
 
 .category-list__item:last-child {
