--- a/CSS/slider.css
+++ b/CSS/slider.css
@@ -174,11 +174,17 @@
     display: flex;
     flex-direction: column;
     text-align: center;
-    padding-left: var(--space-md);
+    /*    padding-left: var(--space-md);*/
     flex-grow: 1;
     scroll-snap-align: start;
     flex-wrap: wrap;
     flex-basis: 0;
+
+    border: 5px solid #fff;
+    box-shadow: 1px 1px 5px rgba(155, 155, 155, 0.3);
+    margin: 0 2rem;
+
+    transition: transform .25s ease-out;
 }
 
 .category-list__link {
@@ -197,22 +203,23 @@
     border-radius: 50%;
     padding: 0.var(--space-md);
     margin-bottom: 0.5rem;
-    max-height: 142px;
+    max-height: 192px;
     max-width: 142px;
     margin-left: auto;
     margin-right: auto;
+
 }
 
 .category-list__icon {
     height: 120px;
     width: 120px;
     max-width: none;
-    background-color: var(--red-color);
-    border-radius: 50%;
-    padding: 1rem;
-    border: 5px solid #fff;
-    transition: transform .25s ease-out;
-    box-shadow: 1px 1px 5px rgba(155, 155, 155, 0.3);
+    /*    background-color: var(--red-color);*/
+    /*    border-radius: 50%;*/
+    /*    padding: 1rem;*/
+
+
+
 }
 
 .category-list__icon:hover {
@@ -229,7 +236,7 @@
 .category-list__category-title {
     font-family: var(--font-family-roboto);
     font-weight: var(--font-weight-light);
-    font-size: var(--h6-font-size);
+    font-size: 1.8rem;
 }
 
 /********************END Category Slider ********************/
