--- a/CSS/slider.css
+++ b/CSS/slider.css
@@ -60,7 +60,7 @@
     width: 80px;
     max-width: none;
     background-color: #fff;
-    border-radius: 50%;
+    /*    border-radius: 50%;*/
     padding: 1rem;
 }
 
@@ -87,9 +87,16 @@
 }
 
 @media (min-width: 640px) {
-    .usp-list__item {
-        flex-basis: 25%;
+    .usp-list {
+        justify-content: center;
     }
+
+    .usp-list__item {
+        flex-basis: 250px;
+        flex-grow: 0;
+    }
+
+
 }
 
 @media (min-width: 900px) {
@@ -113,7 +120,7 @@
     width: 100%;
     margin-left: auto;
     margin-right: auto;
-    max-width: 1200px;
+    max-width: 1400px;
 }
 
 .category-slider__title {
@@ -181,7 +188,7 @@
     flex-basis: 0;
 
     border: 5px solid #fff;
-    box-shadow: 1px 1px 5px rgba(155, 155, 155, 0.3);
+    /*    box-shadow: 1px 1px 5px rgba(155, 155, 155, 0.3);*/
     margin: 0 2rem;
 
     transition: transform .25s ease-out;
